--- a/public/index.html
+++ b/public/index.html
@@ -4,6 +4,9 @@
     <meta charset="utf-8" />
     <link href="https://fonts.googleapis.com/css2?family=Aclonica&display=swap" rel="stylesheet">
     <meta name="viewport" content="width=device-width, initial-scale=1" />
+
+    <link href="https://fonts.googleapis.com/css2?family=Aclonica&family=Bungee+Shade&family=Rye&display=swap" rel="stylesheet">
+
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
